# ESP32-LC-Uptimekuma

./: CMakeLists.txt  README.md  api_test.py  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  app_events.h  gxhtc3.c  gxhtc3.h  idf_component.yml  landing_page.c  landing_page.h  main_ui.c  main_ui.h  spi_lcd_touch_example_main.c  ui_events.h  uptime_kuma.c  uptime_kuma.h  uptime_kuma_ui.c  uptime_kuma_ui.h  wifi_config_ui.c  wifi_config_ui.h  wifi_manager.c  wifi_manager.h  wifi_success_ui.c  wifi_success_ui.h
